(03/23/07)

*** Fixed -resume

*** Fixed code dealing with command line arguments

(03/16/07)

*** Labels in graphs are quoted now

(03/12/07)

*** Cache remote directory structure creation.

(03/03/07)

*** Moved job directory creation to the wrapper

(03/03/07)

*** The default values for mapping parameters handling below
    did not allow implementations to get the value of an 
	optional parameter by checking if it's not null. This can
	now be done by specifying null as a default value.

(03/02/07)

*** Added log message to print full stack trace of exceptions
    that cause Swift to fail
	
*** Better handling of default values for mapping parameters, 
    and better handling of mapping parameter errors.

(03/01/07)

*** Fixed @arg.

(02/19/07)

*** Fixed a race in the cache

(02/16/07)

*** Fixed stdin issue (bug #19)

*** Fixed an issue with vdl:cacheAndLockFile considering files for 
    which the transfers failed as being actually cached.

(02/14/07)

*** Print usage  and exit instead of a nasty exception if the input 
    file does not exist (bug #15)

(02/13/07)

*** Ongoing parser changes

*** Make sure /bin and /usr/bin are added to the path in the
    wrapper.
	
*** When there's a NPE or CCE in an exception chain that causes the
    execution to fail, the full stack trace is printed.

(02/11/07)

*** SwiftScript syntax change: The function invocation (i=q)=f(1) must 
    be written with the () parentheses surrounding the return variables.
    Previously, the parentheses were optional, and the same could be written
    as i=q=f(1); This is no longer the case.

(02/10/07)

*** On-going parser changes primarily aimed at producing more user-friendly
    syntax errors but also including these syntax changes:
      - parser no longer recognises vestigial for(;;) construct
      - parser allows type declarations and other top level statements
        (aside from namespace declarations) to be mixed together. Previously,