@@ -1,3 +1,8 @@
+(04/11/07)
+
+*** CSV mapper will now take commas as a field separator (in addition to the
+    existing behaviour of space and tab)
+
 (03/23/07)
 
 *** Fixed -resume
